--- a/Final-game/index.html
+++ b/Final-game/index.html
@@ -13,11 +13,14 @@
 <body>
     <script src = "./lib/phaser.js"></script>
     <script src = "./src/scenes/Play.js"></script>
+    <script src = "./src/scenes/Sky.js"></script>
     <script src = "./src/main.js"></script>
     <script src = "./src/prefabs/Mother.js"></script>
     <script src = "./src/prefabs/Fish.js"></script>
     <script src = "./src/prefabs/Shark.js"></script>
-    <script src = "./src/prefabs/Hook.js"></script>   
+    <script src = "./src/prefabs/Hook.js"></script>
+    <script src = "./src/prefabs/Bird.js"></script>
+    <script src = "./src/prefabs/Nest.js"></script>   
 
 </body>
 </html>
