add baby and scene 1 score

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     <script src = "./src/prefabs/Shark.js"></script>
     <script src = "./src/prefabs/Hook.js"></script>
     <script src = "./src/prefabs/Bird.js"></script>
-    <script src = "./src/prefabs/Nest.js"></script>   
+    <script src = "./src/prefabs/Nest.js"></script>
+    <script src = "./src/prefabs/Baby.js"></script>   
 
 </body>
 </html>
