add menu and gameover scene

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 <body>
     <script src = "./lib/phaser.js"></script>
     <script src = "./src/scenes/Play.js"></script>
+    <script src = "./src/scenes/Menu.js"></script>
+    <script src = "./src/scenes/GameOver.js"></script>
     <script src = "./src/scenes/Sky.js"></script>
     <script src = "./src/main.js"></script>
     <script src = "./src/prefabs/Mother.js"></script>
@@ -21,7 +23,8 @@
     <script src = "./src/prefabs/Hook.js"></script>
     <script src = "./src/prefabs/Bird.js"></script>
     <script src = "./src/prefabs/Nest.js"></script>
-    <script src = "./src/prefabs/Baby.js"></script>   
+    <script src = "./src/prefabs/Baby.js"></script>
+    <script src = "./src/prefabs/Back.js"></script>   
 
 </body>
 </html>
