change new bg and add hunter

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     <script src = "./src/prefabs/Bird.js"></script>
     <script src = "./src/prefabs/Nest.js"></script>
     <script src = "./src/prefabs/Baby.js"></script>
-    <script src = "./src/prefabs/Back.js"></script>   
+    <script src = "./src/prefabs/Back.js"></script>
+    <script src = "./src/prefabs/Hunter.js"></script>   
 
 </body>
 </html>
