--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <script src = "./src/scenes/Sky.js"></script>
     <script src = "./src/main.js"></script>
     <script src = "./src/prefabs/Mother.js"></script>
-    <script src = "./src/prefabs/Fish.js"></script>
+    <script src = "./src/prefabs/Fish1.js"></script>
     <script src = "./src/prefabs/Shark.js"></script>
     <script src = "./src/prefabs/Hook.js"></script>
     <script src = "./src/prefabs/Bird.js"></script>
