add trash and fish

--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
     <script src = "./src/main.js"></script>
     <script src = "./src/prefabs/Mother.js"></script>
     <script src = "./src/prefabs/Fish1.js"></script>
+    <script src = "./src/prefabs/Fish2.js"></script>
     <script src = "./src/prefabs/Fish3.js"></script>
+    <script src = "./src/prefabs/Trash.js"></script>
+    <script src = "./src/prefabs/Bulb.js"></script>
     <script src = "./src/prefabs/Shark.js"></script>
     <script src = "./src/prefabs/Hook.js"></script>
     <script src = "./src/prefabs/Bird.js"></script>
