add gameover scenes

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     <script src = "./lib/phaser.js"></script>
     <script src = "./src/scenes/Play.js"></script>
     <script src = "./src/scenes/Menu.js"></script>
-    <script src = "./src/scenes/GameOver.js"></script>
+    <script src = "./src/scenes/Eaten.js"></script>
+    <script src = "./src/scenes/Frozen.js"></script>
+    <script src = "./src/scenes/Posion.js"></script>
     <script src = "./src/main.js"></script>
     <script src = "./src/prefabs/Mother.js"></script>
     <script src = "./src/prefabs/Fish1.js"></script>
