add control scene

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src = "./lib/phaser.js"></script>
     <script src = "./src/scenes/Play.js"></script>
     <script src = "./src/scenes/Menu.js"></script>
+    <script src = "./src/scenes/Control.js"></script>
     <script src = "./src/scenes/Eaten.js"></script>
     <script src = "./src/scenes/Frozen.js"></script>
     <script src = "./src/scenes/Posion.js"></script>
